Add some styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="weather-container">
       <input type="text" id="city-name" placeholder="enter city name" />
       <button id="get-data">get weather data</button>
       <h3>Weather for city:</h3>
