Change styles for better visibility

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Weather app</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:400,700"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="weather-container">
-      <input type="text" id="city-name" placeholder="enter city name" />
-      <button id="get-data">get weather data</button>
       <h3>Weather for city:</h3>
+      <input type="text" id="city-name" placeholder="enter city name" />
+      <button id="get-data">GO!</button>
       <div class="data-container">
         <div id="data-name"></div>
         <div class="data-icon">
